--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "firebase": "^11.10.0",
+    "ngx-quill": "^28.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
